This is a snap shot when manually counting works.

--- a/adaptor-race/Makefile
+++ b/adaptor-race/Makefile
@@ -1,11 +1,10 @@
 CC=arm-linux-gcc
 
-key:	keyboardread.c charlib.c
-	${CC} -c -fPIC charlib.c
-	${CC} -c keyboardread.c
-	${CC} -o key charlib.o keyboardread.o -lrt
+.c.o:	
+	${CC} -c $< -o $@
 
-all:	adtimer led
-	
-.c.o:
-	${CC} -c $@ $<
+race:	button.o gpio.o race.o keyboardread.o charlib.o
+	${CC} -o race button.o charlib.o gpio.o keyboardread.o race.o -lrt -lpthread
+
+clean:
+	rm -rf *.o race
